--- a/cms/templates/_macros/extractYouTubeId.twig
+++ b/cms/templates/_macros/extractYouTubeId.twig
@@ -1,3 +1,4 @@
+{# @var craft \craft\web\twig\variables\CraftVariable #}
 {% macro extractYouTubeId(url) %}{% spaceless %}
 {% set ytregex1 = '/^(?:https?:\\/\\/)?(?:www\.)?(?:youtu\.be\\/|youtube\.com)(?:\\/embed\\/|\\/v\\/|\\/watch\\?v=||\\/watch\\\?.+&v=)/' %}
 {% set ytregexTrailingSlash = '/(\\/)$/' %}
