--- a/cms/templates/_partials/blocks/text.twig
+++ b/cms/templates/_partials/blocks/text.twig
@@ -5,15 +5,15 @@
 {% set heading = block['heading'] is defined ? block.heading : '' %}
 {% set rtfContent = block['rtfContent'] is defined ? block.rtfContent : '' %}
 
-<section class="section section--small section-{{ block_type }}-block animatable">
-	<div class="container">
-		{% if heading|length %}
-			<h2 class="heading">{{ heading | typogrify(true) }}</h2>
-		{% endif %}
-		{% if rtfContent|length %}
-			<div class="content rte">
-				{{ rtfContent }}
-			</div>
-		{% endif %}
-	</div>
+<section class="section section--medium section--whitespace section-{{ block_type }}--block animatable">
+    <div class="container">
+        {% if heading|length %}
+            <h2 class="primary--heading">{{ heading }}</h2>
+        {% endif %}
+        {% if rtfContent|length %}
+            <div class="content rte">
+                {{ rtfContent }}
+            </div>
+        {% endif %}
+    </div>
 </section>
