--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -64,8 +64,8 @@
   text-transform: uppercase;
   color: $heading-copy-color;
   line-height: $header-lineheight;
-  margin-bottom: 0.65em;
-  font-size: rem-calc(36);
+  margin-bottom: 1.6rem;
+  font-size: rem-calc(35);
 
   @include breakpoint(medium up) {
     font-size: rem-calc(70);
@@ -80,8 +80,8 @@
   text-transform: uppercase;
   color: $heading-copy-color;
   line-height: $header-lineheight;
-  margin-bottom: 0.65em;
-  font-size: rem-calc(32);
+  margin-bottom: 1.6rem;
+  font-size: rem-calc(30);
 
   @include breakpoint(medium up) {
     font-size: rem-calc(50);
@@ -96,11 +96,31 @@
   text-transform: uppercase;
   color: $heading-copy-color;
   line-height: $header-lineheight;
-  margin-bottom: 0.65em;
+  margin-bottom: 1.6rem;
   font-size: rem-calc(25);
 
   @include breakpoint(medium up) {
     font-size: rem-calc(35);
+  }
+}
+
+.cta {
+  font-family: $body-copy-font;
+  font-style: normal;
+  font-weight: 700;
+  letter-spacing: 0;
+  text-transform: uppercase;
+  color: $heading-copy-color;
+  line-height: 1.8;
+  margin-bottom: 0;
+  font-size: rem-calc(20);
+
+  @include breakpoint(medium up) {
+    font-size: rem-calc(20);
+  }
+
+  .is-dark & {
+    color: #fefefe;
   }
 }
 
@@ -721,6 +741,132 @@ a.logo {
         .field-group .field input, .field-group .buttons .button {
           margin-bottom: 0;
         }
+      }
+    }
+  }
+}
+
+// Button styles
+.button {
+  @extend .cta;
+
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  background: none;
+  border: none;
+  color: initial;
+  text-align: left;
+  text-decoration: none;
+  text-transform: none;
+
+  &:hover, &:active, &:focus {
+    background: none;
+    color: initial;
+    border: none;
+  }
+
+  transition: color 200ms ease, background-color 200ms ease, border-color 200ms ease;
+
+  &.button--text {
+    position: relative;
+    background: transparent;
+    color: $body-copy-color;
+    padding: 0 5px;
+    border-width: 0;
+    text-transform: uppercase;
+    transition: color 200ms ease;
+    z-index: 1;
+
+    &::after {
+      content: '';
+      position: absolute;
+      background: rgba($primary-accent, .15);
+      left: 0;
+      right: 0;
+      bottom: 5px;
+      height: 7px;
+      z-index: -1;
+
+      transition: background-color 200ms ease;
+    }
+
+    &:hover, &:focus {
+      color: $primary-accent;
+
+      &::after {
+        background: rgba($primary-accent, 0.1);
+      }
+    }
+
+    .is-dark & {
+      color: #FFFFFF;
+
+      &::after {
+        background: rgba(#16191A, .15);
+      }
+
+      &:hover::after {
+        background: rgba(#16191A, .25);
+      }
+    }
+
+    .is-dark &:hover, .is-dark &:focus {
+      color: #fefefe;
+    }
+  }
+
+  &.button--primary,
+  &.button--secondary {
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 50px;
+    padding: 0.75rem 2.25rem;
+    color: #fefefe;
+    text-transform: uppercase;
+    line-height: 1;
+    text-align: center;
+  }
+
+  &.button--secondary {
+    border-color: #fefefe;
+    background: transparent;
+
+    &:hover {
+      border-color: $primary-accent;
+      background: $primary-accent;
+    }
+  }
+  &.button--primary {
+    border-color: $primary-accent;
+    background: $primary-accent;
+  }
+}
+
+// Buttons container 
+.buttons {
+  display: flex; 
+  flex-direction: column;
+  align-items: flex-start;
+
+  @include breakpoint(medium up) {
+    flex-direction: row;
+  }
+
+  .button {
+    margin-bottom: 1rem;
+    display: inline-flex;
+
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+
+    @include breakpoint(medium up) {
+      margin-bottom: 0;
+      margin-right: 1rem;
+
+      &:last-of-type {
+        margin-right: 0;
       }
     }
   }
