--- a/cms/templates/_partials/blocks/contact_form.twig
+++ b/cms/templates/_partials/blocks/contact_form.twig
@@ -1,43 +1,38 @@
 {# Contact Form Block #}
-{# Just an example of a Vue contact form, modify and style to fit needs #}
-{% set block_type = "contact-form" %}
-
-{% import '_macros/_lazyImager' as LazyImager %}
+{% set block_type = "contact_form" %}
 
 {# Block variable defaults #}
 {% set heading = block['heading'] is defined ? block.heading : '' %}
-{% set rtfAdditionalContent = block['rtfAdditionalContent'] is defined ? block.rtfAdditionalContent : '' %}
+{% set sectionType = block['sectionType'] is defined ? block.sectionType : '' %}
+{% set emailAddress = block['emailAddress'] is defined and block.emailAddress|length ? block.emailAddress : siteSettings.emailAddress %}
 
-<section class="section section--medium section-{{ block_type}}--block animatable">
-    <div class="container">
-        {% if heading|length %}<div class="form-header"><h1>{{ heading|typogrify(true) }}</h1></div>{% endif %}
+<section class="section section--medium section--whitespace {% if sectionType|length %}section--{{ sectionType }}{% endif %} section-{{ block_type}}--block animatable">
+    <div class="container" v-if="initialized">
+        {% if heading|length %}<div class="form-header"><h2 class="primary--heading">{{ heading }}</h2></div>{% endif %}
         <div class="contact-form-container">
-            <form class="contact-form" method="post" action="/" @submit.prevent="onSubmit" novalidate>
+            <validation-form @submit="onSubmit" v-slot="{ errors, values }" :validation-schema="schema" class="contact-form">
                 {{ csrfInput() }}
                 <input type="hidden" name="action" value="contact-form/send">
                 <div class="field-group">
-                    <div class="field"><input class="input name-input" name="fromName" type="text" placeholder="What is your name?" v-model="name" v-validate="'required'" required></div>
-                    <div class="field"><input class="input email-input" name="fromEmail" type="email" placeholder="What is your email address?" v-model="email" v-validate="'required|email'" required></div>
+                    <div class="field"><Field as="input" class="input name-input" :class="{ invalid: errors.name }" name="name" type="text" placeholder="Full Name *" required></div>
                 </div>
                 <div class="field-group">
-                    <div class="field"><input class="input phone-input" name="message[Phone]" type="tel" placeholder="What is your phone number?" v-model="phone" v-validate="'required'" required></div>
-                    <div class="field"><input class="input company-input" name="message[Organization]" type="text" placeholder="What is your organization?" v-model="organization" v-validate="'required'" required></div>
+                <div class="field"><Field as="input" class="input email-input" :class="{ invalid: errors.email }" name="email" type="email" placeholder="Email Address *" required></div>
+                    <div class="field"><Field as="input" class="input phone-input" :class="{ invalid: errors.phone }" name="phone" type="tel" placeholder="Phone Number"></div>
                 </div>
 
                 <div class="field">
-                    <textarea class="input message-input" name="message[body]" rows="4" placeholder="What would you like to tell us?" v-model="message" v-validate="'required'" required></textarea>
+                    <Field as="textarea" class="input message-input" name="body" :class="{ invalid: errors.message }" rows="4" placeholder="What would you like to tell us? *" required></textarea>
                 </div>
 
                 <p class="help error" v-if="ajaxError" v-cloak>
-                    Sorry, something went wrong, and we couldn't send your message. Please email us at <a href="mailto:{{ siteSettings.primaryContactEmail }}">{{ siteSettings.primaryContactEmail }}</a> directly.
+                    Sorry, something went wrong, and we couldn't send your message. Please email us at <a href="mailto:{{ siteSettings.emailAddress }}">{{ siteSettings.emailAddress }}</a> directly.
                 </p>
-                {# <p class="help" v-if="submitted" v-cloak>
-                    Thanks for getting in touch! We'll get back to you shortly with more details. 
-                </p> #}
+                
                 <div class="buttons">
-                    <button class="button primary" :class="{ 'submitting': submitting, 'submitted': submitted}" type="submit" :disabled="submitting">${buttonLabel}</button>
+                    <button class="button button--primary" :class="{ 'submitting': submitting, 'submitted': submitted}" type="submit" :disabled="submitting">${buttonLabel}</button>
                 </div>
-            </form>
+            </validation-form>
         </div>
     </div>
 </section>
